# rg_hackathon_2015_string

./: .gitignore
Game/RG2015/Assets/: MainGameScene.unity  NidaleeTestWalk.unity
Game/RG2015/ProjectSettings/: ProjectSettings.asset  TagManager.asset
ParticleTest/Assets/: particletest.unity
ParticleTest/Assets/HA Textures/: Thumbs.db  structure_lane_middlehole.dds
ParticleTest/Assets/Howling/: BKDF_Matte_Skybox.FBX  BK_cliffer.FBX  BK_periph_ice_closeup.FBX  CRANE.FBX  ICICLES1_alpha.FBX  Keep.FBX  LM_Cutaway.FBX  LM_Lane.FBX  LM_SnowShelf.FBX  LM_Stairs_Lane.FBX  LM_ground_bracket.FBX  LM_lambert.FBX  LM_polySurface172386_shader.FBX  NE_Gate.FBX  NE_SHOP_Items.FBX  SB_Wall_E.FBX  SB_Wall_F.FBX  SHOP.FBX  SHOP_CAVE.FBX  SW_ShopICE_alpha.FBX  SWbase_cloth_alpha.FBX  Statue.FBX  Wall_of_Grass.FBX  chain_base_plate_shader.FBX  fj_jeremy_shop_north_ICICLES1_alpha.FBX  fj_jeremy_shop_north_fj_jeremy_shop_north_Statue.FBX  hero_emblemSG.FBX  ice_blocks_alpha.FBX  (+5 more)
ParticleTest/ProjectSettings/: ProjectSettings.asset
Tools/lol2dae/: CMakeLists.txt
Tools/lol2dae/src/: AnmBone.h  AnmImporter.cpp  AnmImporter.h  ColladaWriter.cpp  ColladaWriter.h  CustomEdit.cpp  EulerUtilities.cpp  EulerUtilities.h  FileLocation.h  SklBone.h  SklImporter.cpp  SklImporter.h  SknImporter.cpp  SknImporter.h  SknVertex.h  file.cpp  file.h  lol2dae.cpp  lol2dae.h  lol2daeError.h  main.cpp  stdafx.cpp  stdafx.h
XerathE/: Thumbs.db  Xerath_Base_E_Beam_Reticle.dds  Xerath_Base_E_Warning_Reticle.dds  Xerath_Base_Z_BoltsThin.dds  Xerath_Base_Z_Energy_4x4.dds  Xerath_Base_Z_Rings.dds
(+357 files in other folders)
